# S.T.A.R.S.

./: Animation.cpp  Animation.h  Button.cpp  Button.h  CMakeLists.txt  Containers.cpp  Containers.h  Dashboard.cpp  Dashboard.h  Entry.cpp  Entry.h  Gui.cpp  Gui.h  Handler.cpp  Handler.h  Orbit.cpp  Orbit.h  README.md  literals.cpp  main.cpp  typedefs_and_globals.h
core/: Containers.cpp  Containers.h  Core.h  Create.cpp  Create.h  Game.cpp  Game.h  Handler.cpp  Handler.h  Loader.cpp  Loader.h  Metadata.cpp  Metadata.h  Overloaded.h  Resource.cpp  Resource.h  Resourse.cpp  Resourse.h  Save.cpp  Save.h  Traiter.cpp  Traiter.h  main.cpp  overloaded.h
interface/: Button.cpp  Button.h  Corner.cpp  Corner.h  Dashboard.cpp  Dashboard.h  Directions.cpp  Directions.h  Dropdown.cpp  Dropdown.h  Group.h  Gui.cpp  Gui.h  Interfaces.h  LeftCenterPanel.cpp  LeftCenterPanel.h  Message.h  Panel.cpp  Panel.h  Place.h  RigthBottomMesenger.cpp  RigthBottomMesenger.h
objects/: Asteroids.cpp  Asteroids.h  Galaxy.cpp  Galaxy.h  Moon.cpp  Moon.h  Objects.h  Orbit.cpp  Orbit.h  Planet.cpp  Planet.h  Star.cpp  Star.h  System.cpp  System.h
primitives/: Animated.cpp  Animated.h  Animation.cpp  Animation.h  Entry.cpp  Entry.h  Group.h  Sprite.cpp  Sprite.h  Vectorized.cpp  Vectorized.h
resources/icons/main/: TODO
utility/: literals.cpp  overloaded.h  random_body.h  typedefs_and_globals.h
